// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c7 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .keylines__ArticleKeylineItem-sc-1s03wwf-1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c6 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c7 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="keylines__KeylineItem-sc-1s03wwf-0 keylines__ArticleKeylineItem-sc-1s03wwf-1 c3 c4"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c6 responsiveweb__BodyContainer-sc-1exejum-3 c6 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c7 responsiveweb__PrimaryImg-sc-16nqyj8-5 c7 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c7 {
  padding-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .keylines__ArticleKeylineItem-sc-1s03wwf-1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c6 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="keylines__KeylineItem-sc-1s03wwf-0 keylines__ArticleKeylineItem-sc-1s03wwf-1 c3 c4"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c6 responsiveweb__BodyContainer-sc-1exejum-3 c6 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c7 responsiveweb__FullWidthImg-sc-16nqyj8-6 c7 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c7 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .keylines__ArticleKeylineItem-sc-1s03wwf-1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c6 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c7 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="keylines__KeylineItem-sc-1s03wwf-0 keylines__ArticleKeylineItem-sc-1s03wwf-1 c3 c4"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c6 responsiveweb__BodyContainer-sc-1exejum-3 c6 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c7 responsiveweb__SecondaryImg-sc-16nqyj8-7 c7 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c7 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .keylines__ArticleKeylineItem-sc-1s03wwf-1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c6 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c7 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="keylines__KeylineItem-sc-1s03wwf-0 keylines__ArticleKeylineItem-sc-1s03wwf-1 c3 c4"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c6 responsiveweb__BodyContainer-sc-1exejum-3 c6 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c7 responsiveweb__InlineImg-sc-16nqyj8-8 c7 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
